--- a/Tut1/Demo1/index.html
+++ b/Tut1/Demo1/index.html
@@ -44,8 +44,10 @@
         <p style="margin-left:40px">Thus began the so-called browser wars and, along with seeing who could implement
             more bells and whistles than the other guy, browser makers also began inventing proprietary HTML elements
             that only worked with their browsers.
-            <br>Some examples of these are the <marquee>...</marquee> tags (scrolling text) which originally only worked
-            with Internet Explorer and the <blink>...</blink> tags (blinking text) which still only works with
+            <br>Some examples of these are the < marquee>...< /marquee> tags (scrolling text) which
+            originally only worked
+            with Internet Explorer and the < blink>...< / blink> tags (blinking text) which still only
+            works with
             Gecko-based browsers such as Firefox.
         </p>
 
@@ -90,16 +92,18 @@
 
         <h6 style="font-size:15px">What's new in HTML5?</h6>
         <p><b>HTML5</b> offers a host of new features including special elements for semantic labelling such as
-        <section>, <nav>, <article>, <aside>, <header>, <footer> and <main>
-         <br>These define the type of content associated with each element. <b>This makes
-             structuring content more efficient and helps search engines crawl the website,
-             meaning a well-structured HTML5 site has better chances of ranking highly in
-             search results.</b>
-         <br>Adding multimedia elements is also simplified with <audio> and <video> tags,
-          and a wide selection of new application program interfaces (APIs) lets
-          developers easily integrate a huge range of functionality into HTML5 sites. </p>
-         <p style="margin-left:40px"><i>One of the big advantages of HTML5 is that it
-          doesn’t rely on proprietary third-party plugins to create complex and powerful web projects.</i></p>
+        < section>, < nav>, < article>, < aside>, < header>, < footer> and < main>
+                                    <br>These define the type of content associated with each element. <b>This makes
+                                        structuring content more efficient and helps search engines crawl the website,
+                                        meaning a well-structured HTML5 site has better chances of ranking highly in
+                                        search results.</b>
+                                    <br>Adding multimedia elements is also simplified with < audio> and < video> tags,
+                                            and a wide selection of new application program interfaces (APIs) lets
+                                            developers easily integrate a huge range of functionality into HTML5 sites.
+                                            </p>
+                                            <p style="margin-left:40px"><i>One of the big advantages of HTML5 is that it
+                                                    doesn’t rely on proprietary third-party plugins to create complex
+                                                    and powerful web projects.</i></p>
 </body>
 
 </html>
